# nexus

./: .dockerignore  .gitignore  CONSISTENCY.md  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
core/: Cargo.toml  Dockerfile
core/benches/: hybrid.rs  indexer.rs
core/src/: http.rs  lib.rs  main.rs  node.rs
core/src/ast/: features.rs  mod.rs  normalizer.rs  parser.rs
core/src/crawler/: crawler.rs  engine.rs  fetcher.rs  frontier.rs  mod.rs  robots.rs
core/src/crypto/: identity.rs  mod.rs  reputation.rs
core/src/indexer/: inverted.rs  mod.rs  posting.rs  storage.rs  tokenizer.rs
core/src/network/: gossip.rs  kademlia.rs  messages.rs  mod.rs  query_router.rs  quic.rs
core/src/pagerank/: distributed.rs  local.rs  mod.rs
core/src/scoring/: bm25.rs  hybrid.rs  mod.rs  query_features.rs  vector.rs
core/src/sketch/: hyperloglog.rs
core/tests/: integration.rs
gateway/: Dockerfile  README.md  index.ts  package.json
gateway/src/: api.integration.test.ts  api.test.ts  api.ts  errors.ts  proto.ts
gateway/src/services/: MergeEngine.ts  NodeRegistry.test.ts  NodeRegistry.ts  QueryExpander.ts  QueryPlanner.test.ts  QueryPlanner.ts  RagPipeline.ts  RateLimiter.test.ts  RateLimiter.ts  RebalanceService.ts
proto/: messages.ts  package.json
tools/: benchmark.py  gossip_convergence.py  sweep_dp_epsilon.py  train_alpha.py
