[package]
name = "nexus-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "nexus_core"
path = "src/lib.rs"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
rmp-serde = "1"

# Index
roaring = "0.11"
dashmap = "6"
blake3 = "=1.8.3"

rayon = "1"

tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"

half = "2"
hnsw_rs = "0.3"

quinn = "=0.11.9"
rustls = { version = "=0.23.37", features = ["ring"] }

ed25519-dalek = { version = "=2.2.0", features = ["rand_core"] }

reqwest = { version = "0.13", features = ["rustls"], default-features = false }
url = "2"
scraper = "0.25"

axum = "0.7"
futures = "0.3"

anyhow = "1"
thiserror = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
streaming-iterator = "0.1.9"
rcgen = "=0.13.2"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "indexer"
harness = false
